# bvh

./: .clang-format  .gitignore  CMakeLists.txt  README.md
bvh/: CMakeLists.txt  base.h  embree.h  simple.h  util.h
test/: CMakeLists.txt  ambient.cpp  ambient.h  entry.cpp  image.cpp  image.h  log.h  mesh.cpp  mesh.h  random.h  timer.h  v3.h
